src/main/java/myne/MyneParser.java
// Generated from Myne.g4 by ANTLR 4.2.2
package myne;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MyneParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WORD=1, PUNCTUATION=2, NEWLINE=3, COMMA=4, IGNORE=5;
	public static final String[] tokenNames = {
		"<INVALID>", "WORD", "PUNCTUATION", "NEWLINE", "COMMA", "IGNORE"
	};
	public static final int
		RULE_song = 0, RULE_stanza = 1, RULE_verse = 2, RULE_sentence = 3;
	public static final String[] ruleNames = {
		"song", "stanza", "verse", "sentence"
	};

	@Override
	public String getGrammarFileName() { return "Myne.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MyneParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SongContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(MyneParser.NEWLINE); }
		public StanzaContext stanza(int i) {
			return getRuleContext(StanzaContext.class,i);
		}
		public List<StanzaContext> stanza() {
			return getRuleContexts(StanzaContext.class);
		}
		public TerminalNode NEWLINE(int i) {
			return getToken(MyneParser.NEWLINE, i);
		}
		public SongContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_song; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyneListener ) ((MyneListener)listener).enterSong(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyneListener ) ((MyneListener)listener).exitSong(this);
		}
	}

	public final SongContext song() throws RecognitionException {
		SongContext _localctx = new SongContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_song);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(11);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(8); match(NEWLINE);
				}
				}
				setState(13);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(15); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(14); stanza();
				}
				}
				setState(17); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WORD );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StanzaContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(MyneParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(MyneParser.NEWLINE, i);
		}
		public VerseContext verse(int i) {
			return getRuleContext(VerseContext.class,i);
		}
		public List<VerseContext> verse() {
			return getRuleContexts(VerseContext.class);
		}
		public StanzaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stanza; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyneListener ) ((MyneListener)listener).enterStanza(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyneListener ) ((MyneListener)listener).exitStanza(this);
		}
	}

	public final StanzaContext stanza() throws RecognitionException {
		StanzaContext _localctx = new StanzaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stanza);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(20); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(19); verse();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(22); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=ATN.INVALID_ALT_NUMBER );
			setState(27);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(24); match(NEWLINE);
				}
				}
				setState(29);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VerseContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(MyneParser.NEWLINE, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public VerseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_verse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyneListener ) ((MyneListener)listener).enterVerse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyneListener ) ((MyneListener)listener).exitVerse(this);
		}
	}

	public final VerseContext verse() throws RecognitionException {
		VerseContext _localctx = new VerseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_verse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(30); sentence();
				}
				}
				setState(33); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WORD );
			setState(35); match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenceContext extends ParserRuleContext {
		public List<TerminalNode> WORD() { return getTokens(MyneParser.WORD); }
		public List<TerminalNode> COMMA() { return getTokens(MyneParser.COMMA); }
		public TerminalNode PUNCTUATION() { return getToken(MyneParser.PUNCTUATION, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(MyneParser.COMMA, i);
		}
		public TerminalNode WORD(int i) {
			return getToken(MyneParser.WORD, i);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyneListener ) ((MyneListener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyneListener ) ((MyneListener)listener).exitSentence(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sentence);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(41); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(37); match(WORD);
					setState(39);
					_la = _input.LA(1);
					if (_la==COMMA) {
						{
						setState(38); match(COMMA);
						}
					}

					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(43); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			} while ( _alt!=2 && _alt!=ATN.INVALID_ALT_NUMBER );
			setState(46);
			_la = _input.LA(1);
			if (_la==PUNCTUATION) {
				{
				setState(45); match(PUNCTUATION);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}